Download tasks implemented

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ plugins {
 dependencies {
     compileOnly gradleApi()
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.61'
+
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0'
+
+    compile 'de.undercouch:gradle-download-task:3.4.3'
+
     testCompileOnly gradleTestKit()
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.6.2'
@@ -16,6 +21,7 @@ dependencies {
 repositories {
     jcenter()
     mavenCentral()
+    mavenLocal()
 }
 
 group = GROUP
